better user experience for editing profile

--- a/profile/templates/profile_content.html
+++ b/profile/templates/profile_content.html
@@ -4,11 +4,13 @@
   <p><input type="text" id="platform-profile-name" /></p>
   <div id="tutorial-profile"></div>
   <p>Url: <input type="text" id="platform-profile-url" /></p>
+  <a id="profile-description-edit">Edit</a>
   <p>Description:</p>
+  <div id="profile-description-display"></div>      
   <p><textarea id="profile-description"></textarea></p>      
   </div>
   <div id="profile-preview" class="preview">
-      This is how your contacts see your profile:
+      <p>This is how your contacts see your profile:</p>
       <div id="profile-render"></div>
   </div>
 </div>
