--- a/static/platform/styles/common.css
+++ b/static/platform/styles/common.css
@@ -258,10 +258,17 @@ h3 {
 #profile input#platform-profile-url {
   width: 80%;
 }
+#profile a#profile-description-edit {
+  float: right;
+}
+#profile div#profile-description-display {
+  margin-top: 40px;
+}
 #profile textarea#profile-description {
+  margin-top: 20px;
   width: 100%;
   height: 70%;
-  border: 0;
+  border: 1px solid #000;
   font-size: 14px;
 }
 #profile input {
