add contacts CSS

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -4,6 +4,8 @@
           type="text/css" media="screen" />
     <link href="/static/news/styles/news.css" rel="stylesheet" 
           type="text/css" media="screen" />
+    <link href="/static/contacts/styles/contacts.css" rel="stylesheet"     
+          type="text/css" media="screen" />
     <link href="/static/notes/styles/notes.css" rel="stylesheet" 
           type="text/css" media="screen" />
     <link href="/static/activities/styles/activities.css" rel="stylesheet" 
