add edit button

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -10,6 +10,8 @@
           type="text/css" media="screen" />
     <link href="/static/activities/styles/activities.css" rel="stylesheet" 
           type="text/css" media="screen" />
+    <link href="/static/profile/styles/profile.css" rel="stylesheet" 
+          type="text/css" media="screen" />
     <link type="text/css" href="/static/css/jquery-ui-black-tie.css" 
           rel="Stylesheet" />          
 
