--- a/profile/templates/profile_content.html
+++ b/profile/templates/profile_content.html
@@ -4,7 +4,10 @@
   <p><input type="text" id="platform-profile-name" /></p>
   <div id="tutorial-profile"></div>
   <p>Url: <input type="text" id="platform-profile-url" /></p>
-  <a id="profile-description-edit">Edit</a>
+  <div id="profile-toolbar">
+    <a id="profile-change-password">Change password</a>
+    <a id="profile-description-edit">Edit</a>
+  </div>
   <p>Description:</p>
   <div id="profile-description-display"></div>      
   <p><textarea id="profile-description"></textarea></p>      
