--- a/activities/templates/activities_content.html
+++ b/activities/templates/activities_content.html
@@ -27,6 +27,6 @@
       <div id="activities-preview" class="preview"></div>
   </div>
       <script type="text/javascript" 
-              src="/static/activities/lib/activities.js">
+              src="/static/activities/app/activities.dev.js">
       </script>
 
