--- a/contacts/templates/contact_content.html
+++ b/contacts/templates/contact_content.html
@@ -19,6 +19,6 @@
   <div id="contact-preview" class="preview"> </div>
 </div>
 <script type="text/javascript" 
-        src="/static/contacts/lib/contacts.js">
+        src="/static/contacts/app/contacts.dev.js">
 </script>
 
