change news Cakefile with latest teatime Cakefile version

--- a/news/templates/news_content.html
+++ b/news/templates/news_content.html
@@ -33,6 +33,6 @@
       <div id="news-preview" class="preview"> </div>
       </div>
       <script type="text/javascript" 
-              src="/static/news/lib/news.js ">
+              src="/static/news/app/news.dev.js ">
       </script>
  
