change Cakefile with latest version of teatime Cakefile

--- a/notes/templates/notes_content.html
+++ b/notes/templates/notes_content.html
@@ -22,6 +22,6 @@
          <div id="notes-preview" class="preview"> </div>
         </div>
         <script type="text/javascript" 
-                src="/static/notes/lib/notes.js ">
+                src="/static/notes/app/notes.dev.js ">
         </script>
  
