--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -27,7 +27,7 @@
   <body>    
     {% block body %}{% end %}
   </body>
-  <script type="text/javascript" src="/static/platform/lib/platform.js">
+  <script type="text/javascript" src="/static/platform/app/platform.dev.js">
   </script>
 </html>
 
