--- a/profile/templates/profile_content.html
+++ b/profile/templates/profile_content.html
@@ -15,6 +15,6 @@
   </div>
 </div>
 <script type="text/javascript" 
-        src="/static/profile/lib/profile.js">
+        src="/static/profile/app/profile.dev.js">
 </script>
 
