allow micropost selection in news application

--- a/static/news/styles/news.css
+++ b/static/news/styles/news.css
@@ -16,7 +16,8 @@ div.news-newss {
   margin-left: 2px;
 }
 div.news-micropost-row {
-  padding-bottom: 20px;
+  padding: 20px;
+  border-top: 1px solid #ccc;
 }
 p.news-micropost-content {
   padding-bottom: 5px;
@@ -45,4 +46,7 @@ div.news-micropost-row p {
 }
 #news-toolbar {
   padding: 20px 10px 0px 0px;
+}
+#news-more {
+  margin: 20px 0px;
 }
