--- a/static/platform/styles/common.styl
+++ b/static/platform/styles/common.styl
@@ -132,6 +132,13 @@ h3
   margin-bottom: 6px
 
 
+/* commons */
+.selected
+  background-color #def
+
+.mouseover
+  background-color #eef
+
 /* Tools */
 
 .dialog
