--- a/static/news/styles/news.styl
+++ b/static/news/styles/news.styl
@@ -16,7 +16,8 @@ div.news-newss
   margin-left: 2px
 
 div.news-micropost-row
-  padding-bottom: 20px
+  padding: 20px
+  border-top 1px solid #CCC
 
 p.news-micropost-content
   padding-bottom: 5px
@@ -46,3 +47,5 @@ div.news-micropost-row p
 #news-toolbar
   padding: 20px 10px 0px 0px
 
+#news-more
+  margin 20px 0px
