--- a/static/platform/styles/common.css
+++ b/static/platform/styles/common.css
@@ -187,6 +187,12 @@ h3 {
   font-weight: bold;
   margin-bottom: 6px;
 }
+.selected {
+  background-color: #def;
+}
+.mouseover {
+  background-color: #eef;
+}
 .dialog {
   background-color: #000;
   color: #fff;
@@ -262,7 +268,7 @@ h3 {
   float: right;
 }
 #profile div#profile-description-display {
-  margin-top: 40px;
+  margin-top: 45px;
 }
 #profile textarea#profile-description {
   margin-top: 20px;
