--- a/static/contacts/styles/contacts.css
+++ b/static/contacts/styles/contacts.css
@@ -6,3 +6,14 @@ a.contact-name {
 a.contact-name:active {
   color: #000;
 }
+.platform-contact-row {
+  padding: 10px 20px;
+  margin: 0;
+}
+.platform-contact-url {
+  padding-bottom: 12px;
+}
+#contacts {
+  border-top: 1px solid #ccc;
+  margin-bottom: 20px;
+}
