--- a/static/contacts/styles/contacts.styl
+++ b/static/contacts/styles/contacts.styl
@@ -2,5 +2,17 @@ a.contact-name
   font-weight bold
   text-decoration none
   color black
+
 a.contact-name:active
   color black
+
+.platform-contact-row
+  padding 10px 20px
+  margin 0
+
+.platform-contact-url
+  padding-bottom 12px
+
+#contacts
+  border-top 1px solid #CCC
+  margin-bottom 20px
