--- a/static/activities/styles/activities.styl
+++ b/static/activities/styles/activities.styl
@@ -1,6 +1,7 @@
 #activity-list
   margin 20px 0 20px 0
   font-size 13px
+  border-top 1px solid #CCC
   a
     text-decoration none
     font-weight bold
@@ -9,7 +10,7 @@
     text-decoration underline
 
 .activity-row
-  border-bottom 1px solid #AAA
+  border-bottom 1px solid #CCC
   padding 10px 0 10px 0
 
 .activity-error-number
@@ -26,5 +27,4 @@
 span.activity-error-resend:hover
   text-decoration underline
 
-.hover-line
-  background-color #DDEEFF
+
