--- a/static/profile/styles/profile.styl
+++ b/static/profile/styles/profile.styl
@@ -46,3 +46,28 @@
 .profile-description 
   margin-top 10px;
 
+
+#form-dialog
+  text-align center
+
+#form-dialog input
+  background-color: transparent
+  border 0
+  color white
+  text-align center
+
+#form-dialog div
+  padding 10px
+
+#form-dialog-buttons
+  font-weight bold
+  cursor pointer
+
+  
+#form-dialog-buttons span
+  padding 0 10px
+
+
+#info-dialog
+  text-align center
+  padding 10px
