--- a/static/platform/styles/common.css
+++ b/static/platform/styles/common.css
@@ -1,3 +1,4 @@
+/** Reset */
 html,
 body,
 div,
@@ -104,6 +105,7 @@ a {
 a:hover {
   text-decoration: underline;
 }
+/* General */
 body {
   font-family: sans-serif;
   margin: 20px 10px 0 20px;
@@ -146,6 +148,7 @@ input {
 textarea {
   border: 1px solid #000;
 }
+/* Menu */
 #menu {
   margin: 10px 5px 20px 0px;
 }
@@ -187,12 +190,14 @@ h3 {
   font-weight: bold;
   margin-bottom: 6px;
 }
+/* commons */
 .selected {
   background-color: #def;
 }
 .mouseover {
   background-color: #eef;
 }
+/* Tools */
 .dialog {
   background-color: #000;
   color: #fff;
