add pictures app to application menu

--- a/core/templates/base_menu_content.html
+++ b/core/templates/base_menu_content.html
@@ -3,6 +3,9 @@
     <a id="news-a"href="/news/">news</a>
   </span>
   <span>
+      <a id="pictures-a" href="/pictures/">pictures</a>
+  </span> 
+  <span>
       <a id="notes-a" href="/notes/">notes</a>
   </span> 
   <span>
