modifications to make server easier to request from UI

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -12,7 +12,11 @@
           type="text/css" media="screen" />
     <link href="/static/profile/styles/profile.css" rel="stylesheet" 
           type="text/css" media="screen" />
+    <link href="/static/pictures/styles/pictures.css" rel="stylesheet" 
+          type="text/css" media="screen" />
     <link type="text/css" href="/static/css/jquery-ui-black-tie.css" 
+          rel="Stylesheet" />          
+    <link type="text/css" href="/static/css/fileuploader.css" 
           rel="Stylesheet" />          
 
     <script type="text/javascript" src="/static/js/jquery.js"></script>
@@ -22,6 +26,7 @@
     <script type="text/javascript" src="/static/js/underscore.js"></script>
     <script type="text/javascript" src="/static/js/backbone.js"></script>
     <script type="text/javascript" src="/static/js/showdown.js"></script>
+    <script type="text/javascript" src="/static/js/fileuploader.js"></script>
 
     <title>Newebe | {% block title %}{% end %}</title>
   </head>
