--- a/pictures/templates/pictures_content.html
+++ b/pictures/templates/pictures_content.html
@@ -3,6 +3,9 @@
          <div class="app">   
          <!-- Posting form -->
          <form id="pictures-form" action="/pictures/wall/" method="post">
+             <div id="pictures-file-uploader">
+             </div>
+             <input id=pictures-title-field" name="title" type="text"></input>
              <input id="pictures-post-button" 
                     class="button post-button" type="submit" value="Post" />
          </form>
