Allow picture posting and browsing from UI

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -28,6 +28,10 @@
     <script type="text/javascript" src="/static/js/showdown.js"></script>
     <script type="text/javascript" src="/static/js/fileuploader.js"></script>
 
+    <script type="text/javascript" src="/static/js/jasmine.js"></script>
+    <script type="text/javascript" src="/static/js/jasmine-html.js"></script>  
+    <link rel="stylesheet" href="/static/css/jasmine.css">
+
     <title>Newebe | {% block title %}{% end %}</title>
   </head>
 
