--- a/static/css/fileuploader.css
+++ b/static/css/fileuploader.css
@@ -2,10 +2,14 @@
 
 .qq-upload-button {
     display:block; /* or inline-block */
-    width: 105px; padding: 7px 0; text-align:center;    
-    background:#880000; border-bottom:1px solid #ddd;color:#fff;
+    width: 100%; padding: 7px 0; text-align:center;    
+    background: black; border-bottom:1px solid #ddd;color:#fff;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    font-size: 26px;
+    margin-bottom: 20px;
 }
-.qq-upload-button-hover {background:#cc0000;}
+.qq-upload-button-hover {background:#DDEEFF; color: black; }
 .qq-upload-button-focus {outline:1px dotted black;}
 
 .qq-upload-drop-area {
@@ -17,7 +21,7 @@
 }
 .qq-upload-drop-area-active {background:#FF7171;}
 
-.qq-upload-list {margin:15px 35px; padding:0; list-style:disc;}
+.qq-upload-list { display: none; margin:15px 35px; padding:0; list-style:disc;}
 .qq-upload-list li { margin:0; padding:0; line-height:15px; font-size:12px;}
 .qq-upload-file, .qq-upload-spinner, .qq-upload-size, .qq-upload-cancel, .qq-upload-failed-text {
     margin-right: 7px;
