--- a/pictures/templates/pictures_content.html
+++ b/pictures/templates/pictures_content.html
@@ -3,11 +3,10 @@
          <div class="app">   
          <!-- Posting form -->
          <form id="pictures-form" action="/pictures/wall/" method="post">
+             <!--input id=pictures-title-field" name="title" type="text">
+             </input-->
              <div id="pictures-file-uploader">
              </div>
-             <input id=pictures-title-field" name="title" type="text"></input>
-             <input id="pictures-post-button" 
-                    class="button post-button" type="submit" value="Post" />
          </form>
          <!-- End posting form -->
 
