--- a/static/pictures/styles/pictures.css
+++ b/static/pictures/styles/pictures.css
@@ -1,55 +1,25 @@
-input.button {
-  font-weight: bold;
+.pictures-preview {
+  text-align: center;
 }
-input.post-button {
-  float: right;
-  font-size: 18px;
-  margin-left: 3px;
+#pictures-picture-preview {
+  max-width: 100%;
 }
-textarea.news-area {
-  width: 100%;
-  font-size: 18px;
-  padding: 5px;
-}
-#micro-posts {
-  border-bottom: 1px solid #ccc;
-}
-div.news-newss {
+#pictures-preview-toolbar {
+  text-align: right;
   margin-top: 20px;
-  margin-left: 2px;
 }
-div.news-micropost-row {
-  padding: 20px;
+#pictures-list {
+  margin-top: 20px;
   border-top: 1px solid #ccc;
 }
-p.news-micropost-content {
-  padding-bottom: 5px;
+.pictures-row {
+  padding: 20px;
+  border-bottom: 1px solid #ccc;
 }
-p.news-micropost-content span {
+.pictures-row a {
+  color: #000;
   font-weight: bold;
 }
-p.news-micropost-date {
-  font-size: 10px;
-}
-a.news-micropost-delete {
+.pictures-row img {
   float: right;
-  margin-left: 10px;
-}
-a.news-micropost-author {
-  float: left;
-  margin-right: 5px;
-  font-weight: bold;
-  color: #000;
-}
-a:visited.news-micropost-author {
-  color: #000;
-}
-div.news-micropost-row p {
-  margin-bottom: 6px;
-}
-#news-toolbar {
-  padding: 20px 10px 0px 0px;
-}
-#news-more {
-  margin: 20px 0px;
 }
