--- a/static/pictures/styles/pictures.styl
+++ b/static/pictures/styles/pictures.styl
@@ -1,54 +1,25 @@
-input.button
-  font-weight: bold
+.pictures-preview
+  text-align center
 
-input.post-button
-  float: right
-  font-size: 18px
-  margin-left: 3px
+#pictures-picture-preview
+  max-width 100%
 
-textarea.news-area
-  width: 100%
-  font-size: 18px
-  padding: 5px
+#pictures-preview-toolbar
+  text-align right
+  margin-top 20px
 
-#micro-posts
-  border-bottom 1px solid #CCC
-
-div.news-newss
-  margin-top: 20px
-  margin-left: 2px
-
-div.news-micropost-row
-  padding: 20px
+#pictures-list 
+  margin-top 20px
   border-top 1px solid #CCC
 
-p.news-micropost-content
-  padding-bottom: 5px
+.pictures-row 
+  padding 20px
+  border-bottom 1px solid #CCC
 
-p.news-micropost-content span
-  font-weight: bold
+.pictures-row a
+  color black
+  font-weight bold
 
-p.news-micropost-date
-  font-size: 10px
+.pictures-row img 
+  float right
 
-a.news-micropost-delete
-  float: right
-  margin-left: 10px
-
-a.news-micropost-author
-  float: left
-  margin-right: 5px
-  font-weight: bold
-  color: black;
-
-a:visited.news-micropost-author
-  color: black
-
-div.news-micropost-row p
-  margin-bottom: 6px
-
-#news-toolbar
-  padding: 20px 10px 0px 0px
-
-#news-more
-  margin 20px 0px
