add routes to picture application

--- a/pictures/templates/pictures_content.html
+++ b/pictures/templates/pictures_content.html
@@ -12,8 +12,8 @@
 
          <!-- Tool bar -->
          <div id="pictures-toolbar">
-           <a id="pictures-my-button" href="#">mine</a>
-           <a id="pictures-all-button" href="#">all</a>
+           <a id="pictures-my-button" href="#pictures/mine/">mine</a>
+           <a id="pictures-all-button" href="#pictures/all/">all</a>
            <span>
              until <input id="pictures-from-datepicker" type="text"></input> 
            </span>
@@ -27,7 +27,7 @@
          </div>
          <!-- End pictures Listing -->
 
-         <a id="pictures-more">more...</a>
+         <a id="pictures-more-button">more...</a>
          <div id="tutorial-pictures"></div>
       </div>
       <div id="pictures-preview" class="preview"> </div>
