Display errror message when contact URL is wrong.

--- a/contacts/templates/contact_content.html
+++ b/contacts/templates/contact_content.html
@@ -6,6 +6,11 @@
       <input type="text" id="contact-url-field"/></input>
       <input type="submit" id="contact-post-button" value="Add"/></input>
   </form>
+  <p id="contact-url-error" class="error">
+    Wrong URL, URL should look like http://www.mynewebe.net:8000/ or like 
+    http://87.123.21.13:12000/. Don't forget port number and trailing slash
+    at the end of the URL.    
+  </p>
   <div id="toolbar">
     <a id="contact-all-button" href="">All</a>   
     <a id="contact-pending-button" href="">Pending</a>   
