--- a/newebe.styl
+++ b/newebe.styl
@@ -114,8 +114,27 @@ span.step
   color: white
 
 #menu a.selected
-  color: #AAA
+  color #AAA
 
 #menu a.selected:hover
-  border: none
+  border none
 
+.feature
+  background-color white
+  color black
+  width 320px
+  padding 10px
+  
+  float left
+
+.feature-left
+  margin-right 10px
+
+.feature-right
+  margin-left 10px
+
+.feature h3
+  font-size 26px
+  padding 0
+  margin 0
+  font-variant normal
