--- a/static/profile/styles/profile.styl
+++ b/static/profile/styles/profile.styl
@@ -2,6 +2,9 @@
   margin-top 30px
   font-size 18px
 
+#profile-preview
+  display none
+
 #profile-toolbar
   margin-bottom 10px
 
@@ -15,8 +18,6 @@
 #profile input#platform-profile-url
   width 80%
 
-//#profile a#profile-description-edit
-
 #profile div#profile-description-display
   margin-top 10px
 
@@ -26,6 +27,7 @@
   height 70%
   border 1px solid black
   font-size 14px
+  display none
 
 #profile input
   font-size 18px
