add style for <pre> tag.

--- a/static/platform/styles/common.styl
+++ b/static/platform/styles/common.styl
@@ -85,8 +85,26 @@ input
   border: 1px solid black
 
 textarea
-  border: 1px solid black
+  border 1px solid black
 
+h1
+  font-weight bold
+  text-decoration underline
+  margin-bottom 6px
+
+h2
+  font-weight bold
+  font-style italic
+  margin-bottom 6px
+
+h3
+  font-weight bold
+  margin-bottom 6px
+
+pre
+  background #EEE
+  padding 10px 10px 10px 30px
+  margin 10px 0
 
 /* Menu */
 
@@ -116,21 +134,6 @@ textarea
 
 #logout-a
   margin-right 10px
-
-h1
-  font-weight: bold
-  text-decoration: underline
-  margin-bottom: 6px
-
-h2
-  font-weight: bold
-  font-style: italic
-  margin-bottom: 6px
-
-h3
-  font-weight: bold
-  margin-bottom: 6px
-
 
 /* commons */
 .selected
