--- a/static/platform/styles/common.css
+++ b/static/platform/styles/common.css
@@ -148,6 +148,25 @@ input {
 textarea {
   border: 1px solid #000;
 }
+h1 {
+  font-weight: bold;
+  text-decoration: underline;
+  margin-bottom: 6px;
+}
+h2 {
+  font-weight: bold;
+  font-style: italic;
+  margin-bottom: 6px;
+}
+h3 {
+  font-weight: bold;
+  margin-bottom: 6px;
+}
+pre {
+  background: #eee;
+  padding: 10px 10px 10px 30px;
+  margin: 10px 0;
+}
 /* Menu */
 #menu {
   margin: 10px 5px 20px 0px;
@@ -175,20 +194,6 @@ textarea {
 }
 #logout-a {
   margin-right: 10px;
-}
-h1 {
-  font-weight: bold;
-  text-decoration: underline;
-  margin-bottom: 6px;
-}
-h2 {
-  font-weight: bold;
-  font-style: italic;
-  margin-bottom: 6px;
-}
-h3 {
-  font-weight: bold;
-  margin-bottom: 6px;
 }
 /* commons */
 .selected {
