--- a/newebe.styl
+++ b/newebe.styl
@@ -71,7 +71,8 @@ span.step
   padding: 10px
 
 #download
-  padding: 10px
+  padding: 10px #468856
+
   text-align: center
   background-color: black
   color: white
@@ -138,3 +139,18 @@ span.step
   padding 0
   margin 0
   font-variant normal
+
+
+#annoucement
+  background-color #DFF0D8
+  color #468856
+  border 1px solid #468856
+  padding 20px
+  margin-bottom 20px
+
+#annoucement a 
+  color #468856
+
+#annoucement p, h2
+  padding 0
+  margin 0
