--- a/newebe.css
+++ b/newebe.css
@@ -88,8 +88,9 @@ span.step {
 #download p {
   padding: 0;
   margin: 0;
+  margin-bottom: 10px;
 }
-#download p#disclaimer {
+#disclaimer {
   font-size: 0.6em;
 }
 #menu {
@@ -138,18 +139,25 @@ span.step {
   margin: 0;
   font-variant: normal;
 }
-#annoucement {
+#announcement {
   background-color: #dff0d8;
   color: #468856;
   border: 1px solid #468856;
   padding: 20px;
   margin-bottom: 20px;
 }
-#annoucement a {
+#announcement a {
   color: #468856;
 }
-#annoucement p,
+#announcement p,
 h2 {
   padding: 0;
   margin: 0;
+}
+#announcement p {
+  margin-bottom: 5px;
+  font-size: 18px;
+}
+#announcement h2 {
+  margin-bottom: 10px;
 }
