--- a/newebe.styl
+++ b/newebe.styl
@@ -89,8 +89,9 @@ span.step
 #download p
   padding: 0
   margin: 0
+  margin-bottom 10px
 
-#download p#disclaimer
+#disclaimer
   font-size: 0.6em
 
 #menu
@@ -141,16 +142,24 @@ span.step
   font-variant normal
 
 
-#annoucement
+#announcement
   background-color #DFF0D8
   color #468856
   border 1px solid #468856
   padding 20px
   margin-bottom 20px
 
-#annoucement a 
+#announcement a 
   color #468856
 
-#annoucement p, h2
+#announcement p, h2
   padding 0
   margin 0
+
+#announcement p
+  margin-bottom 5px
+  font-size 18px
+
+#announcement h2
+  margin-bottom 10px
+
