allow user to put a css file for theming

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -19,6 +19,11 @@
     <link type="text/css" href="/static/css/fileuploader.css" 
           rel="Stylesheet" />          
 
+    {% if isTheme %}
+    <link type="text/css" href="/static/css/theme.css" 
+          rel="Stylesheet" />   
+    {% end %}
+
     <script type="text/javascript" src="/static/js/jquery.js"></script>
     <script type="text/javascript" src="/static/js/jqueryui.js"></script>
     <script type="text/javascript" src="/static/js/date.js"></script>
