--- a/static/profile/styles/profile.styl
+++ b/static/profile/styles/profile.styl
@@ -14,6 +14,7 @@
 #profile input#platform-profile-name
   font-size 56px
   font-weight bold
+  width 95%
 
 #profile input#platform-profile-url
   width 80%
