reduce request to load js lib

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -24,18 +24,11 @@
           rel="Stylesheet" />   
     {% end %}
 
-    <script type="text/javascript" src="/static/js/jquery.js"></script>
-    <script type="text/javascript" src="/static/js/jqueryui.js"></script>
-    <script type="text/javascript" src="/static/js/date.js"></script>
-    <script type="text/javascript" src="/static/js/json2.js"></script>
-    <script type="text/javascript" src="/static/js/underscore.js"></script>
-    <script type="text/javascript" src="/static/js/backbone.js"></script>
-    <script type="text/javascript" src="/static/js/showdown.js"></script>
-    <script type="text/javascript" src="/static/js/fileuploader.js"></script>
+    <script type="text/javascript" src="/static/js/lib.js"></script>
 
-    <script type="text/javascript" src="/static/js/jasmine.js"></script>
-    <script type="text/javascript" src="/static/js/jasmine-html.js"></script>  
-    <link rel="stylesheet" href="/static/css/jasmine.css">
+    <!--script type="text/javascript" src="/static/js/jasmine.js"></script>
+    <script type="text/javascript" src="/static/js/jasmine-html.js"></script> 
+    <link rel="stylesheet" href="/static/css/jasmine.css"-->
 
     <title>Newebe | {% block title %}{% end %}</title>
   </head>
