reduce request to retrieve css file

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <link href="/static/platform/styles/common.css" rel="stylesheet" 
+    <!--link href="/static/platform/styles/common.css" rel="stylesheet" 
           type="text/css" media="screen" />
     <link href="/static/news/styles/news.css" rel="stylesheet" 
           type="text/css" media="screen" />
@@ -17,6 +17,8 @@
     <link type="text/css" href="/static/css/jquery-ui-black-tie.css" 
           rel="Stylesheet" />          
     <link type="text/css" href="/static/css/fileuploader.css" 
+          rel="Stylesheet" /-->          
+    <link type="text/css" href="/static/css/style.css" 
           rel="Stylesheet" />          
 
     {% if isTheme %}
@@ -24,7 +26,7 @@
           rel="Stylesheet" />   
     {% end %}
 
-    <script type="text/javascript" src="/static/js/lib.js"></script>
+    <script type="text/javascript" src="/static/js/libs.js"></script>
 
     <!--script type="text/javascript" src="/static/js/jasmine.js"></script>
     <script type="text/javascript" src="/static/js/jasmine-html.js"></script> 
