--- a/news/templates/news_content.html
+++ b/news/templates/news_content.html
@@ -5,9 +5,8 @@
          <form id="news-form" action="/news/wall/" method="post">
              <textarea class="news-area" 
                        name="content" id="id_content"></textarea>
-             <input id="news-post-button" 
-                    class="button post-button" type="submit" value="Post" />
-         </form>
+            <a id="news-post-button" class="button post-button">Post</a>
+        </form>
          <!-- End posting form -->
 
          <!-- Tool bar -->
