add possibility to push notes

--- a/static/notes/styles/notes.styl
+++ b/static/notes/styles/notes.styl
@@ -19,6 +19,9 @@
   height 400px
   padding 5px
 
+#notes-preview img
+  width 100%
+
 .selected
   background-color #def
 
@@ -27,5 +30,7 @@ a.notes-note-delete
 
 a.notes-note-edit
   float right
+
+
 
 
