--- a/static/platform/styles/common.styl
+++ b/static/platform/styles/common.styl
@@ -142,6 +142,15 @@ pre
 .mouseover
   background-color #eef
 
+.button-bar
+  border-top 1px solid #AAA
+  padding-top 5px 
+  text-align right
+
+.button-bar .ui-button-text
+  font-size 12px
+  padding 3px
+
 /* Tools */
 
 .dialog
@@ -153,6 +162,17 @@ pre
   left: 180px
   top: 200px
   z-index 10
+
+.dialog-buttons
+  text-align: center
+  margin: 25px 0 5px 0
+
+.dialog-buttons span
+  color: white
+  font-weight: bold
+  text-decoration: none
+  padding: 20px
+  cursor: pointer
 
 #confirmation-buttons
   text-align: center
@@ -251,3 +271,26 @@ h3.tutorial-text
   font-size 12px
   color red
   display none
+
+
+/* Selector styles */
+
+#document-selector-list
+  margin-top 10px
+  margin-bottom 20px
+
+.doc-row
+  padding 20px
+  border-bottom 1px solid #555
+
+.doc-row-date
+  font-size 10px
+
+.doc-row-title
+  font-size 18px
+
+.mouseover-dialog
+  color black
+
+.selected-dialog
+  color black
