--- a/static/platform/styles/common.css
+++ b/static/platform/styles/common.css
@@ -202,6 +202,15 @@ pre {
 .mouseover {
   background-color: #eef;
 }
+.button-bar {
+  border-top: 1px solid #aaa;
+  padding-top: 5px;
+  text-align: right;
+}
+.button-bar .ui-button-text {
+  font-size: 12px;
+  padding: 3px;
+}
 /* Tools */
 .dialog {
   background-color: #000;
@@ -212,6 +221,17 @@ pre {
   left: 180px;
   top: 200px;
   z-index: 10;
+}
+.dialog-buttons {
+  text-align: center;
+  margin: 25px 0 5px 0;
+}
+.dialog-buttons span {
+  color: #fff;
+  font-weight: bold;
+  text-decoration: none;
+  padding: 20px;
+  cursor: pointer;
 }
 #confirmation-buttons {
   text-align: center;
@@ -310,4 +330,25 @@ h3.tutorial-text {
   font-size: 12px;
   color: #f00;
   display: none;
+}
+/* Selector styles */
+#document-selector-list {
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+.doc-row {
+  padding: 20px;
+  border-bottom: 1px solid #555;
+}
+.doc-row-date {
+  font-size: 10px;
+}
+.doc-row-title {
+  font-size: 18px;
+}
+.mouseover-dialog {
+  color: #000;
+}
+.selected-dialog {
+  color: #000;
 }
