debug profile and picture app

--- a/news/templates/tutorial_1.html
+++ b/news/templates/tutorial_1.html
@@ -1,8 +1,8 @@
 <h3 class="tutorial-text">Tutorial</h3>
 <p class="tutorial-text">
-You have actually no micro posts. To start you should 
+You have no micro posts yet. To start you should 
 add contacts by going to the contact page. Just click on the word
-contact in the top navigation menu to do that. 
+<em>contact</em> in the top navigation menu to do that. 
 </p>    
 <p class="tutorial-text">
 If you already have some, it's time to micro post.
