some microposts debug

--- a/news/templates/news_content.html
+++ b/news/templates/news_content.html
@@ -5,8 +5,13 @@
          <form id="news-form" action="/news/wall/" method="post">
              <textarea class="news-area" 
                        name="content" id="id_content"></textarea>
-            <a id="news-post-button" class="button post-button">Post</a>
         </form>
+        <div id="news-post-form-toolbar">
+            <a id="news-post-button" class="button post-button">Post</a>
+            <a id="news-attach-button" class="button post-button">Attach</a>
+            <a id="news-attach-note-button" class="button post-button">note</a>
+        </div>
+        <div class="spacer"></div>
          <!-- End posting form -->
 
          <!-- Tool bar -->
