improve ui for attachments

--- a/news/templates/news_content.html
+++ b/news/templates/news_content.html
@@ -9,7 +9,10 @@
         <div id="news-post-form-toolbar">
             <a id="news-post-button" class="button post-button">Post</a>
             <a id="news-attach-button" class="button post-button">Attach</a>
-            <a id="news-attach-note-button" class="button post-button">note</a>
+            <a id="news-attach-note-button" class="button post-button">
+                <img src="/static/images/note.png"
+                     alt="A note is attached" />
+            </a>
         </div>
         <div class="spacer"></div>
          <!-- End posting form -->
