--- a/static/platform/styles/common.styl
+++ b/static/platform/styles/common.styl
@@ -294,3 +294,15 @@ h3.tutorial-text
 
 .selected-dialog
   color black
+
+.note-title
+  text-transform none
+  font-style normal
+  font-size: 24px
+
+.preview img
+  width 100%
+
+.attach-title
+  border-bottom 1px solid #CCC
+  margin-top 50px
