--- a/static/platform/styles/common.css
+++ b/static/platform/styles/common.css
@@ -352,3 +352,15 @@ h3.tutorial-text {
 .selected-dialog {
   color: #000;
 }
+.note-title {
+  text-transform: none;
+  font-style: normal;
+  font-size: 24px;
+}
+.preview img {
+  width: 100%;
+}
+.attach-title {
+  border-bottom: 1px solid #ccc;
+  margin-top: 50px;
+}
