add all stuff needed to UI to allow picture attachment

--- a/news/templates/news_content.html
+++ b/news/templates/news_content.html
@@ -9,10 +9,12 @@
         <div id="news-post-form-toolbar">
             <a id="news-post-button" class="button post-button">Post</a>
             <a id="news-attach-button" class="button post-button">Attach</a>
-            <a id="news-attach-note-button" class="button post-button">
-                <img src="/static/images/note.png"
-                     alt="A note is attached" />
-            </a>
+            <span id="news-attach-note-image" class="button post-button">
+                <img src="/static/images/note.png" alt="A note is attached" />
+            </span>
+            <span id="news-attach-picture-image" class="button post-button">
+                <img src="/static/images/picture.png" alt="An image is attached" />
+            </span>
         </div>
         <div class="spacer"></div>
          <!-- End posting form -->
