--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -604,6 +604,28 @@ h3.tutorial-text {
   border-bottom: 1px solid #ccc;
   margin-top: 50px;
 }
+.document-selector-select-wrapper {
+  display: inline;
+}
+.document-selector-select-wrapper select {
+  background: transparent;
+  color: #fff;
+  width: 200px;
+  padding: 5px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  height: 34px;
+}
+#document-selector .picture-row p.date {
+  float: right;
+}
+#document-selector .picture-row {
+  padding: 10px;
+  border-bottom: 1px solid #aaa;
+}
+#document-selector-toolbar {
+  margin-top: 20px;
+}
 .qq-uploader { position:relative; width: 100%;}
 
 .qq-upload-button {
