--- a/static/platform/styles/common.styl
+++ b/static/platform/styles/common.styl
@@ -298,7 +298,7 @@ h3.tutorial-text
 .note-title
   text-transform none
   font-style normal
-  font-size: 24px
+  font-size 24px
 
 .preview img
   width 100%
@@ -306,3 +306,25 @@ h3.tutorial-text
 .attach-title
   border-bottom 1px solid #CCC
   margin-top 50px
+
+.document-selector-select-wrapper
+  display inline
+
+.document-selector-select-wrapper select
+  background transparent
+  color white
+  width 200px
+  padding 5px
+  font-size 16px
+  border 1px solid #ccc
+  height 34px
+
+#document-selector .picture-row p.date
+  float right
+
+#document-selector .picture-row 
+  padding 10px
+  border-bottom 1px solid #AAA
+      
+#document-selector-toolbar
+  margin-top 20px
