--- a/static/news/styles/news.css
+++ b/static/news/styles/news.css
@@ -53,3 +53,11 @@ div.news-micropost-row p {
 #news-more {
   margin: 20px 0px;
 }
+.image-name {
+  margin-top: 20px;
+  margin-bottom: 5px;
+}
+.note-title {
+  padding-top: 20px;
+  padding-bottom: 5px;
+}
