clean big object display in microposts
* set image max width with 100%
* set word warp property with break-word

--- a/static/platform/styles/common.css
+++ b/static/platform/styles/common.css
@@ -167,6 +167,9 @@ pre {
   padding: 10px 10px 10px 30px;
   margin: 10px 0;
 }
+img {
+  max-width: 100%;
+}
 /* Menu */
 #menu {
   margin: 10px 5px 20px 0px;
