--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -97,6 +97,9 @@ a.news-micropost-author {
 a:visited.news-micropost-author {
   color: #000;
 }
+div.news-micropost-row {
+  word-wrap: break-word;
+}
 div.news-micropost-row p {
   margin-bottom: 6px;
 }
@@ -414,6 +417,9 @@ pre {
   background: #eee;
   padding: 10px 10px 10px 30px;
   margin: 10px 0;
+}
+img {
+  max-width: 100%;
 }
 /* Menu */
 #menu {
