--- a/static/news/styles/news.styl
+++ b/static/news/styles/news.styl
@@ -44,6 +44,9 @@ a.news-micropost-author
 a:visited.news-micropost-author
   color: black
 
+div.news-micropost-row 
+  word-wrap break-word
+
 div.news-micropost-row p
   margin-bottom: 6px
 
