add help button that links to newebe documentation

--- a/core/templates/base_menu_content.html
+++ b/core/templates/base_menu_content.html
@@ -20,4 +20,8 @@
   <span>
       <a id="logout-a" href="/logout/">X</a>
   </span>
+  <span>
+      <a id="help-a" target="_blank" href="http://newebe.org/#documentation">?
+      </a>
+  </span>
 </div>
