--- a/static/contacts/styles/contacts.css
+++ b/static/contacts/styles/contacts.css
@@ -8,6 +8,7 @@ a.contact-name:active {
 }
 .platform-contact-row {
   padding: 10px 20px;
+  border-bottom: 1px solid #ccc;
   margin: 0;
 }
 .platform-contact-url {
@@ -16,7 +17,26 @@ a.contact-name:active {
 #contacts {
   border-top: 1px solid #ccc;
   margin-bottom: 20px;
+  margin-top: 50px;
 }
 #contact-url-error {
   margin: 10px 0;
+}
+.platform-contact-url {
+  padding: 12px 0 18px 0;
+}
+.platform-contact-row-buttons {
+  float: right;
+  height: 40px;
+  padding: 0;
+}
+#contact-url-field {
+  font-size: 20px;
+  width: 100%;
+  margin-top: 2px;
+  padding: 5px;
+  margin-bottom: 1px;
+}
+#contact-post-button {
+  float: right;
 }
