--- a/static/contacts/styles/contacts.styl
+++ b/static/contacts/styles/contacts.styl
@@ -7,7 +7,8 @@ a.contact-name:active
   color black
 
 .platform-contact-row
-  padding 10px 20px
+  padding 10px 20px  
+  border-bottom 1px solid #CCC
   margin 0
 
 .platform-contact-url
@@ -16,6 +17,26 @@ a.contact-name:active
 #contacts
   border-top 1px solid #CCC
   margin-bottom 20px
+  margin-top 50px
 
 #contact-url-error
   margin 10px 0
+
+.platform-contact-url
+  padding 12px 0 18px 0
+
+.platform-contact-row-buttons
+  float right
+  height 40px
+  padding 0
+
+#contact-url-field
+  font-size 20px
+  width 100%
+  margin-top 2px
+  padding 5px
+  margin-bottom 1px
+
+#contact-post-button
+  float right
+
