--- a/news/templates/news_content.html
+++ b/news/templates/news_content.html
@@ -7,6 +7,7 @@
                        name="content" id="id_content"></textarea>
         </form>
         <div id="news-post-form-toolbar">
+            <select id="microposts-tag-combo"></select>
             <a id="news-post-button" class="button post-button">Post</a>
             <a id="news-attach-button" class="button post-button">Attach</a>
             <span id="news-attach-note-image" class="button post-button">
@@ -22,7 +23,6 @@
          <!-- Tool bar -->
          <div id="news-toolbar">
            <a id="news-my-button" href="#">mine</a>
-           <a id="news-all-button" href="#">all</a>
            <span>
              until <input id="news-from-datepicker" type="text"></input> 
            </span>
