make login page more w3c validator compliant

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -1,5 +1,6 @@
-<html>
+<!doctype html>
   <head>
+    <meta charset="utf-8">
     <!--link href="/static/platform/styles/common.css" rel="stylesheet" 
           type="text/css" media="screen" />
     <link href="/static/news/styles/news.css" rel="stylesheet" 
@@ -38,7 +39,7 @@
   <body>    
     {% block body %}{% end %}
   </body>
-  <script type="text/javascript" src="/static/platform/app/platform.dev.js">
+  <script type="text/javascript" src="/static/platform/app/platform.dev.js" />
   </script>
 </html>
 
