--- a/auth/templates/login_content.html
+++ b/auth/templates/login_content.html
@@ -1,6 +1,6 @@
 <div id="login-form">
   <p id="platform-login-disclaimer">What is your sesame ?</p>
   <p id="platform-user-form">
-    <input type="password" id="login-password-text-field"></input>
+    <input type="password" id="login-password-text-field" />
   </p>
 </div>
