--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -39,7 +39,7 @@
   <body>    
     {% block body %}{% end %}
   </body>
-  <script type="text/javascript" src="/static/platform/app/platform.dev.js" />
+  <script type="text/javascript" src="/static/platform/app/platform.dev.js">
   </script>
 </html>
 
