refactor tag filtering

--- a/news/templates/news_content.html
+++ b/news/templates/news_content.html
@@ -23,6 +23,7 @@
          <!-- Tool bar -->
          <div id="news-toolbar">
            <a id="news-my-button" href="#">mine</a>
+           <a id="news-full-button" href="#">full</a>
            <span>
              until <input id="news-from-datepicker" type="text"></input> 
            </span>
