--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -140,6 +140,10 @@ div.news-micropost-row p {
   padding-top: 20px;
   padding-bottom: 5px;
 }
+.tags {
+  color: #888;
+  text-align: right;
+}
 #notes-list {
   margin-top: 20px;
 }
