add tag filtering to picture backend
+ light refactoring to avoid repetition with news

--- a/pictures/templates/pictures_content.html
+++ b/pictures/templates/pictures_content.html
@@ -12,6 +12,7 @@
 
          <!-- Tool bar -->
          <div id="pictures-toolbar">
+            <select id="pictures-tag-combo"></select>
            <a id="pictures-my-button" href="#pictures/mine/">mine</a>
            <a id="pictures-all-button" href="#pictures/all/">all</a>
            <span>
