display tag properly in picture and micropost preview

--- a/news/templates/micropost.html
+++ b/news/templates/micropost.html
@@ -1,4 +1,11 @@
 {% autoescape None %} 
+<p class="tags">
+{% for tag in micropost.tags %}
+    {% block tag %}
+        {{ tag }}
+    {% end %}
+{% end %}
+</p>
 
 <p class="micropost-preview-content">{{ micropost.content }}</p>
 
