--- a/pictures/templates/pictures_content.html
+++ b/pictures/templates/pictures_content.html
@@ -14,7 +14,7 @@
          <div id="pictures-toolbar">
             <select id="pictures-tag-combo"></select>
            <a id="pictures-my-button" href="#pictures/mine/">mine</a>
-           <a id="pictures-all-button" href="#pictures/all/">all</a>
+           <a id="pictures-all-button" href="#pictures/all/">full</a>
            <span>
              until <input id="pictures-from-datepicker" type="text"></input> 
            </span>
