picture sharing debug : post only to desired contacts

--- a/pictures/templates/picture.html
+++ b/pictures/templates/picture.html
@@ -10,7 +10,7 @@
   </p>
   <img id="pictures-picture-preview"
        src="/pictures/{{picture._id }}/prev_{{ picture.path }}"
-       alt="{{ picture.title }}" 
+       alt="{{ picture.path }}" 
        />
 </p>
 
