add public profile page

--- a/static/profile/styles/profile.styl
+++ b/static/profile/styles/profile.styl
@@ -74,3 +74,16 @@
 #info-dialog
   text-align center
   padding 10px
+
+#public-profile h1
+  font-size 52px
+  margin-top 30px
+
+#public-profile span
+  color blue
+
+#public-profile h3
+  font-size 22px
+  margin-top 20px
+  margin-bottom 40px
+
