--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -276,6 +276,18 @@ a.notes-note-edit {
   text-align: center;
   padding: 10px;
 }
+#public-profile h1 {
+  font-size: 52px;
+  margin-top: 30px;
+}
+#public-profile span {
+  color: #00f;
+}
+#public-profile h3 {
+  font-size: 22px;
+  margin-top: 20px;
+  margin-bottom: 40px;
+}
 /** Reset */
 html,
 body,
