--- a/static/profile/styles/profile.css
+++ b/static/profile/styles/profile.css
@@ -72,3 +72,15 @@
   text-align: center;
   padding: 10px;
 }
+#public-profile h1 {
+  font-size: 52px;
+  margin-top: 30px;
+}
+#public-profile span {
+  color: #00f;
+}
+#public-profile h3 {
+  font-size: 22px;
+  margin-top: 20px;
+  margin-bottom: 40px;
+}
