add search feature to microposts

--- a/news/templates/news_content.html
+++ b/news/templates/news_content.html
@@ -28,6 +28,10 @@
              until <input id="news-from-datepicker" type="text"></input> 
            </span>
          </div>
+        <div id="news-search-toolbar">
+            <span>Search</span>
+            <input id="news-search-field" type="text"></input> 
+         </div>
          <div class="spacer"></div>
          <!-- End tool bar -->
 
