--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -144,6 +144,9 @@ div.news-micropost-row p {
   color: #888;
   text-align: right;
 }
+#news-search-field {
+  margin-top: 20px;
+}
 #notes-list {
   margin-top: 20px;
 }
