--- a/core/templates/base_menu_content.html
+++ b/core/templates/base_menu_content.html
@@ -6,6 +6,9 @@
       <a id="pictures-a" href="/pictures/">pictures</a>
   </span> 
   <span>
+      <a id="commons-a" href="/commons/">commons</a>
+  </span> 
+  <span>
       <a id="notes-a" href="/notes/">notes</a>
   </span> 
   <span>
