build UI for file sharing

--- a/commons/templates/common.html
+++ b/commons/templates/common.html
@@ -8,9 +8,6 @@
     {% end %}
   {% end %}
   </p>
-  <img id="commons-common-preview"
-       src="/commons/{{common._id }}/prev_{{ common.path }}"
-       alt="{{ common.path }}" 
-       />
+  <p>{{ common.path }}</p>
 </p>
 
