--- a/static/commons/styles/commons.styl
+++ b/static/commons/styles/commons.styl
@@ -18,7 +18,14 @@
 
 .commons-row a
   color black
-  font-weight bold
+i  font-weight bold
+
+.commons-row p
+  text-align: right
+  padding: 5px 0
+
+.commons-date
+  font-size 10px
 
 .commons-row img 
   float right
