--- a/newebe/apps/auth/templates/login.html
+++ b/newebe/apps/auth/templates/login.html
@@ -1,4 +1,4 @@
-{% extends "../../../newebe/core/templates/base.html" %}
+{% extends "../../core/templates/base.html" %}
 
 {% block title %}
 Login
