--- a/newebe/apps/news/templates/news.html
+++ b/newebe/apps/news/templates/news.html
@@ -1,4 +1,4 @@
-{% extends "../../../../newebe/core/templates/base_menu.html" %}
+{% extends "../../core/templates/base_menu.html" %}
 
 {% block title %}News{% end %}
 
