--- a/newebe/apps/core/templates/base_menu.html
+++ b/newebe/apps/core/templates/base_menu.html
@@ -1,7 +1,7 @@
-{% extends "../../core/templates/base.html" %}
+{% extends "../../apps/core/templates/base.html" %}
 
 {% block body %}
-{% include "../../core/templates/base_menu_content.html" %}
+{% include "../../apps/core/templates/base_menu_content.html" %}
 <div id="preview">
   {% block preview %}{% end %}
 </div>
