change base template path when included in profile template

--- a/newebe/apps/profile/templates/profile.html
+++ b/newebe/apps/profile/templates/profile.html
@@ -1,4 +1,4 @@
-{% extends "../../newebe/apps/core/templates/base_menu.html" %}
+{% extends "../core/templates/base_menu.html" %}
 
 {% block content %}
   {% include "profile_content.html" %}
