make transition shorter during login and registering

--- a/newebe/apps/profile/templates/profile_menu_content.html
+++ b/newebe/apps/profile/templates/profile_menu_content.html
@@ -1,4 +1,4 @@
-{% include "../../newebe/core/templates/base_menu_content.html" %}
+{% include "../../../newebe/apps/core/templates/base_menu_content.html" %}
 
 <div id="apps">
     {% include "profile_content.html" %}
