add required views

--- a/newebe/client/app/views/styles/_font.styl
+++ b/newebe/client/app/views/styles/_font.styl
@@ -1,7 +1,7 @@
 @font-face
-  font-family: main
-      src: url('../fonts/open-sans-regular.ttf');
+    font-family: main
+        src: url('../static/fonts/open-sans-regular.ttf')
 
 @font-face
-  font-family: robotic
-      src: url('../fonts/andale-mono.ttf');
+    font-family: robotic
+        src: url('../fonts/andale-mono.ttf')
